// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> should render correctly, when notes are existing 1`] = `
<DragDropContext
  onDragEnd={[Function]}
>
  <div
    className="container"
  >
    <ActionBar
      noteCreationAllowed={true}
      onCreateNote={[Function]}
      onDeleteNote={[Function]}
    />
    <div
      className="row py-1 no-gutters"
      style={
        Object {
          "height": "450px",
        }
      }
    >
      <Route
        path="/notes/:id?"
        render={[Function]}
      />
      <div
        className="col-8 pl-1"
      >
        <Switch>
          <Route
            key="5"
            path="/notes/5"
            render={[Function]}
          />
          <Route
            exact={true}
            key="empty-note"
            path="/notes/"
            render={[Function]}
          />
        </Switch>
      </div>
    </div>
  </div>
</DragDropContext>
`;

exports[`<App/> should render correctly, when there are no notes 1`] = `
<DragDropContext
  onDragEnd={[Function]}
>
  <div
    className="container"
  >
    <ActionBar
      noteCreationAllowed={true}
      onCreateNote={[Function]}
      onDeleteNote={[Function]}
    />
    <div
      className="row py-1 no-gutters"
      style={
        Object {
          "height": "450px",
        }
      }
    >
      <Route
        path="/notes/:id?"
        render={[Function]}
      />
      <div
        className="col-8 pl-1"
      >
        <Switch>
          <Route
            exact={true}
            key="empty-note"
            path="/notes/"
            render={[Function]}
          />
        </Switch>
      </div>
    </div>
  </div>
</DragDropContext>
`;
